--- a/index.html
+++ b/index.html
@@ -1,3 +1,26 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
+  <title>Meme Motivation</title>
+</head>
+<body>
+  <!-- Div containing the CSS -->
+  <div id="avocado">
+    <!-- Import the pic of the meme -->
+    <img src="assets/images/daenerys.jpeg" alt="Daenerys holds an avocado" />
+    <!-- Insert the caption -->
+    <h1>That Special Moment</h1>
+    <p>When you find the perfect avocado at the supermarket</p>
+  </div>
+</body>
+</html>  
+
 <!-- 
   TODO: Create a motivational post website.
 Style it how ever you like. 
@@ -13,4 +36,5 @@ But it must have the following features:
   Hint: Set the image to have a width of 100% so it fills the div. 
 6. Read about the text-transform property on MDN docs to make the h1 uppercase with CSS.
   https://developer.mozilla.org/en-US/docs/Web/CSS/text-transform 
+  
 -->
